--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.0.2",
-    "nodemon": "^2.0.3"
+    "neovis.js": "^1.4.0",
+    "nodemon": "^2.0.3",
+    "pdf-parse": "^1.1.1"
   }
 }
